@@ -142,12 +142,12 @@ Depends: ${misc:Depends},
          libsoup-gnome2.4-1 (= ${binary:Version}),
          libsoup2.4-dev
 Suggests: libsoup2.4-doc
-Description: an HTTP library implementation in C -- Development files
+Description: an HTTP library implementation in C -- GNOME support development files
  It was originally part of a SOAP (Simple Object Access Protocol)
  implementation called Soup, but the SOAP and non-SOAP parts have now been
  split into separate packages.
  .
- libsoup uses the Glib main loop and is designed to work well with GTK
+ libsoup uses the Glib main loop and is designed to work well with GTK+
  applications. This enables GNOME applications to access HTTP servers
  on the network in a completely asynchronous fashion, very similar to
  the Gtk+ programming model (a synchronous operation mode is also
@@ -174,7 +174,7 @@ Priority: extra
 Architecture: any
 Depends: libsoup-gnome2.4-1 (= ${binary:Version}),
          ${misc:Depends}
-Description: an HTTP library implementation in C -- debugging symbols
+Description: an HTTP library implementation in C -- GNOME support debugging symbols
  It was originally part of a SOAP (Simple Object Access Protocol).
  implementation called Soup, but the SOAP and non-SOAP parts have now been
  split into separate packages.
