@@ -25,6 +25,9 @@ libsoup2.4 (2.25.91-2) UNRELEASED; urgency=low
   * debian/watch: Don't uupdate
   * Add debug packages for libsoup and libsoup-gnome. Closes: #519052.
   * debian/copyright: refer to LGPL-2 rather than LGPL'
+  * debian/control.in: fix typo s/GTK/GTK+/
+  * debian/control.in: make libsoup-gnome2.4-dev short description
+    different than libsoup2.4-dev one
 
  -- Gustavo Noronha Silva <kov@debian.org>  Thu, 05 Mar 2009 07:49:04 -0300
 
